# luwiki

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  MCP_SETUP.md  README.md  SERVICE_SETUP.md
data/: default_root.md  default_sandbox.md  sandbox_sample.rs  sandbox_table.csv
docs/: AI_ASSISTANT_RULES.md  BASE_DESIGN.md  BEARER_AUTH_DESIGN.md  BEARER_AUTH_TEST_VIEWPOINTS.md  CLI_SPECS.md  CODING_HTML.md  CODING_RUST.md  CODING_TYPESCRIPT.md  CODING_VUE3.md  EXPORT_DATA_SPEC.md  EXPORT_IMPORT_DESIGN.md  FRONTEND_UI_SPECS.md  FRONT_MATTER_SPECS.md  MACRO_SPECS.md  MCP_APPEND_TEST_VIEWPOINTS.md  MCP_ARCHITECTURE_DESIGN.md  MCP_AUDIT_LOG_DESIGN.md  MCP_AUDIT_LOG_TEST_VIEWPOINTS.md  MCP_AUTHORIZATION_TEST_VIEWPOINTS.md  MCP_CLI_TEST_VIEWPOINTS.md  MCP_EDIT_TEST_VIEWPOINTS.md  MCP_IMPLEMENTATION_TASKS.md  MCP_INTERFACE_AND_ERROR_DESIGN.md  MCP_INTERNAL_DESIGN.md  MCP_PROMPT_SPECS.md  MCP_REGRESSION_TEST_SCOPE.md  MCP_RESOURCE_SPECS.md  MCP_RUNTIME_AND_TRANSPORT_DESIGN.md  MCP_SERVICE_AND_STORAGE_DESIGN.md  MCP_TOOL_SPECS.md  PROJECT_CONSTRAINTS.md  REQUIREMENTS.md  REST_API_SPECS.md  TESTING_TYPESCRIPT.md  WINDOWS_SERVICE_DESIGN.md  openapi.yaml
frontend/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsconfig.test.run.json  vite.config.ts
src/: auth.rs  lib.rs  main.rs
tests/: api_assets.rs  api_hello_auth.rs  api_pages_assets.rs  api_pages_delete.rs  api_pages_list.rs  api_pages_lock.rs  api_pages_meta.rs  api_pages_revision.rs  api_pages_search.rs  api_pages_source.rs  (+16 more)
(+202 files in other folders)
